--- a/index.html
+++ b/index.html
@@ -1,42 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Quattrocento+Sans&display=swap"
+        rel="stylesheet">
+    <!--Css-->
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/bases.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/logo.css">
+    <link rel="stylesheet" href="./css/menu/navbar.css">
+    <link rel="stylesheet" href="./css/menu/menu-item.css">
+    <link rel="stylesheet" href="./css/menu/menu-link.css">
+    <link rel="stylesheet" href="./css/menu/menu-lista.css">
+    <link rel="stylesheet" href="./css/menu/hamburguer.css">
+    <link rel="stylesheet" href="./css/menu/bar.css">
 </head>
+
 <body>
     <!--Menu-->
-    <header>
-        <h1>CM</h1>
-        <nav>
-            <ul>
-                <li>Sobre mí</li>
-                <li>Skills</li>
-                <li>Formación</li>
-                <li>Proyectos</li>
-                <li>Contacto</li>
+
+    <header class="container">
+        <div class="logo">
+            <h1>CM</h1>
+        </div>
+
+        <nav class="navbar">
+            <ul class="nav__menu">
+                <li class="menu__item"><a href="#sobre-mi" class="menu__link">Sobre mí</a></li>
+                <li class="menu__item"><a href="#skills" class="menu__link">Skills</a></li>
+                <li class="menu__item"><a href="#formacion" class="menu__link">Formación</a></li>
+                </li>
+                <li class="menu__item"><a href="#proyectos" class="menu__link">Proyectos</a></li>
+                </li>
+                <li class="menu__item"><a href="#contacto" class="menu__link">Contacto</a></li>
+                </li>
             </ul>
         </nav>
+
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </header>
+
     <main>
         <!--Portada-->
         <section>
             <div>
-                <img src="" alt="Hola">
+                <img src="/img/manito.svg" alt="Hola">
                 <h1>Hola, soy Cynthia Front end Developer</h1>
                 <p>Actualmente estoy participando en el proyecto Oracle ONE en Alura Latam.</p>
                 <img src="" alt="Mirando con lupa">
             </div>
         </section>
+        
         <!--Sobre mí-->
         <section>
             <img src="" alt="Celular en la mano">
             <h2>Sobre mí</h2>
-            <p>Soy estudiante de desarrolladora front end, me apasiona colaborar en equipo y ayudar en todo lo posible. Siempre me he sentido muy comprometida con el aprendizaje, tanto enseñando como aprendiendo de los demás.</p>
-            <p>Mi objetivo es encontrar una empresa que ofrezca oportunidades para poner en práctica mis habilidades en el área de front end utilizando cloud computing. Estoy convencida de que este sector me permitirá incrementar mi desarrollo intelectual y técnico, todo ello trabajando codo con codo con los profesionales de la compañía y colaborando para seguir creciendo.</p>
+            <p>Soy estudiante de desarrolladora front end, me apasiona colaborar en equipo y ayudar en todo lo posible.
+                Siempre me he sentido muy comprometida con el aprendizaje, tanto enseñando como aprendiendo de los
+                demás.</p>
+            <p>Mi objetivo es encontrar una empresa que ofrezca oportunidades para poner en práctica mis habilidades en
+                el área de front end utilizando cloud computing. Estoy convencida de que este sector me permitirá
+                incrementar mi desarrollo intelectual y técnico, todo ello trabajando codo con codo con los
+                profesionales de la compañía y colaborando para seguir creciendo.</p>
         </section>
         <!--Skills-->
         <section>
@@ -107,12 +145,15 @@
             </div>
         </section>
 
-        <!--Proyectos  --> 
-        
+        <!--Proyectos  -->
+
     </main>
     <!--Footer-->
     <footer>
         <h6>Desarrollado por Cynthia -2023</h6>
     </footer>
+    <script src="./js/Menu.js"></script>
 </body>
+
+
 </html>
