Portada agregando div

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <body>
     <!--Menu-->
-
     <header class="container">
+
         <div class="logo">
             <h1>CM</h1>
         </div>
@@ -55,15 +55,20 @@
 
     <main>
         <!--Portada-->
-        <section>
-            <div>
-                <img src="/img/manito.svg" alt="Hola">
-                <h1>Hola, soy Cynthia Front end Developer</h1>
-                <p>Actualmente estoy participando en el proyecto Oracle ONE en Alura Latam.</p>
-                <img src="" alt="Mirando con lupa">
+        <section class="container">
+            <div class="portada">
+                <div>
+                    <div class="portada__titulo">
+                        <img src="/img/manito.svg" alt="Hola">
+                        <h1>Hola, soy Cynthia Front end Developer</h1>
+                    </div>
+                    
+                    <p class="contenido__blanco">Actualmente estoy participando en el proyecto Oracle ONE en Alura Latam.</p>
+                </div>
+                <img src="/img/Buscar-portada.png" alt="Mirando con lupa">
             </div>
         </section>
-        
+
         <!--Sobre mí-->
         <section>
             <img src="" alt="Celular en la mano">
