--- a/index.html
+++ b/index.html
@@ -57,30 +57,34 @@
         <!--Portada-->
         <section class="container">
             <div class="portada">
-                <div>
+                <div class="portada__contenido">
                     <div class="portada__titulo">
-                        <img src="/img/manito.svg" alt="Hola">
-                        <h1>Hola, soy Cynthia Front end Developer</h1>
+                        <h1 class="titulo"><span>&#128406</span> Hola, <br> soy Cynthia <br> Front end Developer</h1>
                     </div>
-                    
-                    <p class="contenido__blanco">Actualmente estoy participando en el proyecto Oracle ONE en Alura Latam.</p>
+
+                    <p class="contenido__blanco portada__subtitulo">Actualmente estoy participando en el proyecto Oracle ONE en Alura
+                        Latam.</p>
                 </div>
                 <img src="/img/Buscar-portada.png" alt="Mirando con lupa">
             </div>
         </section>
 
         <!--Sobre mí-->
-        <section>
-            <img src="" alt="Celular en la mano">
-            <h2>Sobre mí</h2>
-            <p>Soy estudiante de desarrolladora front end, me apasiona colaborar en equipo y ayudar en todo lo posible.
-                Siempre me he sentido muy comprometida con el aprendizaje, tanto enseñando como aprendiendo de los
-                demás.</p>
-            <p>Mi objetivo es encontrar una empresa que ofrezca oportunidades para poner en práctica mis habilidades en
-                el área de front end utilizando cloud computing. Estoy convencida de que este sector me permitirá
-                incrementar mi desarrollo intelectual y técnico, todo ello trabajando codo con codo con los
-                profesionales de la compañía y colaborando para seguir creciendo.</p>
-        </section>
+        <section class="container">
+            <div>
+                <img src="./img/celular.png" alt="Celular en la mano">
+                <h2>Sobre mí</h2>
+                <p class="contenido__blanco">Soy estudiante de desarrolladora front end, me apasiona colaborar en equipo y ayudar en todo lo
+                    posible.
+                    Siempre me he sentido muy comprometida con el aprendizaje, tanto enseñando como aprendiendo de los
+                    demás.</p>
+                <p class="contenido__blanco">Mi objetivo es encontrar una empresa que ofrezca oportunidades para poner en práctica mis habilidades
+                    en
+                    el área de front end utilizando cloud computing. Estoy convencida de que este sector me permitirá
+                    incrementar mi desarrollo intelectual y técnico, todo ello trabajando codo con codo con los
+                    profesionales de la compañía y colaborando para seguir creciendo.</p>
+            </div>
+        /section>
         <!--Skills-->
         <section>
             <h2>Skills</h2>
