Agregando la sección Skills

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                         <h1 class="titulo"><span>&#128406</span> Hola, <br> soy Cynthia <br> Front end Developer</h1>
                     </div>
 
-                    <p class="contenido__blanco portada__subtitulo">Actualmente estoy participando en el proyecto Oracle ONE en Alura
+                    <p class="contenido__blanco portada__subtitulo">Actualmente estoy participando en el proyecto Oracle
+                        ONE en Alura
                         Latam.</p>
                 </div>
                 <img src="/img/Buscar-portada.png" alt="Mirando con lupa">
@@ -70,48 +71,55 @@
         </section>
 
         <!--Sobre mí-->
-        <section class="container">
-            <div>
-                <img src="./img/celular.png" alt="Celular en la mano">
-                <h2>Sobre mí</h2>
-                <p class="contenido__blanco">Soy estudiante de desarrolladora front end, me apasiona colaborar en equipo y ayudar en todo lo
-                    posible.
-                    Siempre me he sentido muy comprometida con el aprendizaje, tanto enseñando como aprendiendo de los
-                    demás.</p>
-                <p class="contenido__blanco">Mi objetivo es encontrar una empresa que ofrezca oportunidades para poner en práctica mis habilidades
-                    en
-                    el área de front end utilizando cloud computing. Estoy convencida de que este sector me permitirá
-                    incrementar mi desarrollo intelectual y técnico, todo ello trabajando codo con codo con los
-                    profesionales de la compañía y colaborando para seguir creciendo.</p>
+        <section class="container container__sobreMi">
+            <div class="sobre__mi">
+                <img src="/img/celular.png" alt="Celular en la mano">
+                <div class="parrafo__sobreMi">
+                    <h2 class="subtitulo__blanco">Sobre mí</h2>
+                    <p class="contenido__blanco parrafo__blanco">Soy estudiante de desarrolladora front end, me apasiona colaborar en
+                        equipo y ayudar en todo lo
+                        posible.
+                        Siempre me he sentido muy comprometida con el aprendizaje, tanto enseñando como aprendiendo de
+                        los
+                        demás.</p> <br>
+                    <p class="contenido__blanco">Mi objetivo es encontrar una empresa que ofrezca oportunidades para
+                        poner en práctica mis habilidades
+                        en
+                        el área de front end utilizando cloud computing. Estoy convencida de que este sector me
+                        permitirá
+                        incrementar mi desarrollo intelectual y técnico, todo ello trabajando codo con codo con los
+                        profesionales de la compañía y colaborando para seguir creciendo.</p>
+
+                </div>
             </div>
-        /section>
+        </section>
         <!--Skills-->
-        <section>
-            <h2>Skills</h2>
-            <div>
-                <div>
-                    <img src="" alt="Figma">
+        <section class="container skills">
+            <h2 class="subtitulo__negro">Skills</h2>
+            <div class="cards__tecno" >
+                <div class="card">
+                    <img src="/img/figma.png" alt="Figma">
                 </div>
-                <div>
-                    <img src="" alt="HTML5">
+                <div class="card">
+                    <img src="/img/css.png" alt="HTML5">
                 </div>
-                <div>
-                    <img src="" alt="CSS3">
+                <div class="card">
+                    <img src="/img/html.png" alt="CSS3">
                 </div>
-                <div>
-                    <img src="" alt="JS">
+                <div class="card">
+                    <img src="/img/js.png" alt="JS">
                 </div>
-                <div>
-                    <img src="" alt="React">
+                <div class="card">
+                    <img src="/img/react.png" alt="React">
                 </div>
-                <div>
-                    <img src="" alt="AWS">
+                <div class="card">
+                    <img src="/img/aws.png" alt="AWS">
                 </div>
-                <div>
-                    <img src="" alt="Github">
+                <div class="card">
+                    <img src="/img/github.png" alt="Github">
                 </div>
-                <div>
-                    <img src="" alt="Git">
+                <div class="card">
+                    <img src="/img/git.png" alt="Git">
                 </div>
             </div>
         </section>
@@ -158,6 +166,7 @@
 
     </main>
     <!--Footer-->
+    <!--https://uiverse.io/ahmed150up/fluffy-dragonfly-49 REDES SOCIALES-->
     <footer>
         <h6>Desarrollado por Cynthia -2023</h6>
     </footer>
