Eliminando / para que se visualicen las imagenes

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                         ONE en Alura
                         Latam.</p>
                 </div>
-                <img src="/img/Buscar-portada.png" alt="Mirando con lupa">
+                <img src="img/Buscar-portada.png" alt="Mirando con lupa">
             </div>
         </section>
 
         <!--Sobre mí-->
         <section class="container container__sobreMi">
             <div class="sobre__mi">
-                <img src="/img/celular.png" alt="Celular en la mano">
+                <img src="img/celular.png" alt="Celular en la mano">
                 <div class="parrafo__sobreMi">
                     <h2 class="subtitulo__blanco">Sobre mí</h2>
                     <p class="contenido__blanco parrafo__blanco">Soy estudiante de desarrolladora front end, me apasiona colaborar en
@@ -98,28 +98,28 @@
             <h2 class="subtitulo__negro">Skills</h2>
             <div class="cards__tecno" >
                 <div class="card">
-                    <img src="/img/figma.png" alt="Figma">
+                    <img src="img/figma.png" alt="Figma">
                 </div>
                 <div class="card">
-                    <img src="/img/css.png" alt="HTML5">
+                    <img src="img/css.png" alt="HTML5">
                 </div>
                 <div class="card">
-                    <img src="/img/html.png" alt="CSS3">
+                    <img src="img/html.png" alt="CSS3">
                 </div>
                 <div class="card">
-                    <img src="/img/js.png" alt="JS">
+                    <img src="img/js.png" alt="JS">
                 </div>
                 <div class="card">
-                    <img src="/img/react.png" alt="React">
+                    <img src="img/react.png" alt="React">
                 </div>
                 <div class="card">
-                    <img src="/img/aws.png" alt="AWS">
+                    <img src="img/aws.png" alt="AWS">
                 </div>
                 <div class="card">
-                    <img src="/img/github.png" alt="Github">
+                    <img src="img/github.png" alt="Github">
                 </div>
                 <div class="card">
-                    <img src="/img/git.png" alt="Git">
+                    <img src="img/git.png" alt="Git">
                 </div>
             </div>
         </section>
