--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <link rel="stylesheet" href="./css/menu/menu-link.css">
     <link rel="stylesheet" href="./css/menu/hamburger.css">
     <link rel="stylesheet" href="./css/menu/bar.css">
+    <link rel="stylesheet" href="./css/portada.css">
+    <link rel="stylesheet" href="./css/portada/portada-contenido.css">
+    <link rel="stylesheet" href="./css/portada/portada-titulo.css">
+    <link rel="stylesheet" href="./css/portada/titulo-principal.css">
+    <link rel="stylesheet" href="./css/portada/portada-subtitulo.css">
+    <link rel="stylesheet" href="./css/portada/img-portada.css">
 </head>
 
 <body>
@@ -51,17 +57,17 @@
     <main>
         <!--Portada-->
         <section class="container">
-            <div class="portada">
+            <div class="portada ">
                 <div class="portada__contenido">
                     <div class="portada__titulo">
-                        <h1 class="titulo"><span>&#128406</span> Hola, <br> soy Cynthia <br> Front end Developer</h1>
+                        <h1 class="titulo__principal"><span>&#128406</span> Hola, <br> soy Cynthia <br> Front end Developer</h1>
                     </div>
 
-                    <p class="contenido__blanco portada__subtitulo">Actualmente estoy participando en el proyecto Oracle
+                    <p class="parrafo__blanco portada__subtitulo">Actualmente estoy participando en el proyecto  <br> Oracle
                         ONE en Alura
                         Latam.</p>
                 </div>
-                <img src="img/Buscar-portada.png" alt="Mirando con lupa">
+                <img class="img__portada" src="img/Buscar-portada.png" alt="Mirando con lupa">
             </div>
         </section>
 
