--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="./css/portada/titulo-principal.css">
     <link rel="stylesheet" href="./css/portada/portada-subtitulo.css">
     <link rel="stylesheet" href="./css/portada/img-portada.css">
+    <link rel="stylesheet" href="./css/portada/mano.css">
 </head>
 
 <body>
