Responsive utilizando arquitectura css

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <link rel="stylesheet" href="./css/portada/portada-subtitulo.css">
     <link rel="stylesheet" href="./css/portada/img-portada.css">
     <link rel="stylesheet" href="./css/portada/mano.css">
+    <link rel="stylesheet" href="./css/sobre-mi.css/container-sobreMi.css">
+    <link rel="stylesheet" href="./css/sobre-mi.css/sobre-mi.css">
+    <link rel="stylesheet" href="./css/sobre-mi.css/subtitulo-sobreMi.css">
+    <link rel="stylesheet" href="./css/sobre-mi.css/parrafo-sobreMi.css">
+    <link rel="stylesheet" href="./css/sobre-mi.css/img-sobreMi.css">
+    <link rel="stylesheet" href="./css/sobre-mi.css/parrafo-blanco-sobreMi.css">
 </head>
 
 <body>
@@ -75,17 +81,17 @@
         <!--Sobre mí-->
         <section class="container container__sobreMi "id="sobre-mi">
             <div class="sobre__mi">
-                <img src="img/celular.png" alt="Celular en la mano">
-                <div class="parrafo__sobreMi">
-                    <h2 class="subtitulo__blanco">Sobre mí</h2>
-                    <p class="contenido__blanco parrafo__blanco">Soy estudiante de desarrolladora front end, me apasiona
+                <img class="img__sobreMi" src="img/celular.png" alt="Celular en la mano">
+                <div  class="parrafo__sobreMi">
+                    <h2 class="subtitulo__sobreMi">Sobre mí</h2>
+                    <p class="parrafo__blanco parrafo__blanco_sobreMi">Soy estudiante de desarrolladora front end, me apasiona
                         colaborar en
                         equipo y ayudar en todo lo
                         posible.
                         Siempre me he sentido muy comprometida con el aprendizaje, tanto enseñando como aprendiendo de
                         los
-                        demás.</p> <br>
-                    <p class="contenido__blanco">Mi objetivo es encontrar una empresa que ofrezca oportunidades para
+                        demás.</p> 
+                    <p class="parrafo__blanco parrafo__blanco_sobreMi">Mi objetivo es encontrar una empresa que ofrezca oportunidades para
                         poner en práctica mis habilidades
                         en
                         el área de front end utilizando cloud computing. Estoy convencida de que este sector me
