--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     <link rel="stylesheet" href="./css/sobre-mi.css/parrafo-sobreMi.css">
     <link rel="stylesheet" href="./css/sobre-mi.css/img-sobreMi.css">
     <link rel="stylesheet" href="./css/sobre-mi.css/parrafo-blanco-sobreMi.css">
+    <link rel="stylesheet" href="./css/skills/skills.css">
+    <link rel="stylesheet" href="./css/skills/cards-tecno.css">
+    <link rel="stylesheet" href="./css/skills/card.css">
+    <link rel="stylesheet" href="./css/subtitulo-negro.css">
 </head>
 
 <body>
