Corrección de subtitulo

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="./css/skills/cards-tecno.css">
     <link rel="stylesheet" href="./css/skills/card.css">
     <link rel="stylesheet" href="./css/subtitulo-negro.css">
+    <link rel="stylesheet" href="./css/subtitulo-blanco.css">
 </head>
 
 <body>
@@ -181,7 +182,7 @@
 
         <!--Proyectos-->
         <section class="container skills" id="proyectos">
-            <h2 class="subtitulo__negro">Proyectos</h2>
+            <h2 class="subtitulo__blanco">Proyectos</h2>
             <div class="container__projects">
 
                 <article class="cards_projects">
@@ -205,6 +206,66 @@
                     </div>
                 </article>
 
+                <article class="cards_projects">
+                    <div class="overlay">
+                        <div class="items head">
+                            <p>Encriptador de texto</p>
+                            <p class="cards__contenido">Encriptador y desencriptador de textos con temática de Rick
+                                y Morty.</p>
+                            <hr>
+                        </div>
+                        <div class="items price">
+                            <button class="button__tecno ">HTML</button>
+                            <button class="button__tecno ">CSS</button>
+                            <button class="button__tecno">JavaScript</button>
+
+                        </div>
+                        <div class="items enlace">
+                            <button class="button_enlace"><a href="Figma">Figma</a></button>
+                            <button class="button_enlace"><a href="Demo">Demo</a></button>
+                        </div>
+                    </div>
+                </article>
+                <article class="cards_projects">
+                    <div class="overlay">
+                        <div class="items head">
+                            <p>Encriptador de texto</p>
+                            <p class="cards__contenido">Encriptador y desencriptador de textos con temática de Rick
+                                y Morty.</p>
+                            <hr>
+                        </div>
+                        <div class="items price">
+                            <button class="button__tecno ">HTML</button>
+                            <button class="button__tecno ">CSS</button>
+                            <button class="button__tecno">JavaScript</button>
+
+                        </div>
+                        <div class="items enlace">
+                            <button class="button_enlace"><a href="Figma">Figma</a></button>
+                            <button class="button_enlace"><a href="Demo">Demo</a></button>
+                        </div>
+                    </div>
+                </article>
+                <article class="cards_projects">
+                    <div class="overlay">
+                        <div class="items head">
+                            <p>Encriptador de texto</p>
+                            <p class="cards__contenido">Encriptador y desencriptador de textos con temática de Rick
+                                y Morty.</p>
+                            <hr>
+                        </div>
+                        <div class="items price">
+                            <button class="button__tecno ">HTML</button>
+                            <button class="button__tecno ">CSS</button>
+                            <button class="button__tecno">JavaScript</button>
+
+                        </div>
+                        <div class="items enlace">
+                            <button class="button_enlace"><a href="Figma">Figma</a></button>
+                            <button class="button_enlace"><a href="Demo">Demo</a></button>
+                        </div>
+                    </div>
+                </article>
             </div>
         </section>
 
