--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="./css/skills/card.css">
     <link rel="stylesheet" href="./css/subtitulo-negro.css">
     <link rel="stylesheet" href="./css/subtitulo-blanco.css">
+    <link rel="stylesheet" href="./css/background-lila.css">
 </head>
 
 <body>
@@ -138,7 +139,7 @@
             </div>
         </section>
         <!--Formación académica-->
-        <section class="container formacion" id="formacion">
+        <section class="container background__lila" id="formacion">
             <h2 class="subtitulo__blanco titulo__formacion">Formación Académica</h2>
 
             <div class="cards__tecno">
@@ -270,7 +271,7 @@
         </section>
 
         <!--Contacto-->
-        <section class="container formulario__contacto" id="contacto">
+        <section class="container background__lila formulario__contacto" id="contacto">
             <h2 class="subtitulo__negro titulo__formacion">Contacto</h2>
             <div class="contacto__container">
                 <img src="/img/Notebook-contacto.png" alt="">
