Skills ajustando responsive

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="./css/subtitulo-negro.css">
     <link rel="stylesheet" href="./css/subtitulo-blanco.css">
     <link rel="stylesheet" href="./css/background-lila.css">
+    <link rel="stylesheet" href="./css/background-blanco.css">
 </head>
 
 <body>
@@ -109,7 +110,7 @@
             </div>
         </section>
         <!--Skills-->
-        <section class="container skills" id="skills">
+        <section class="container skills background__blanco" id="skills">
             <h2 class="subtitulo__negro">Skills</h2>
             <div class="cards__tecno">
                 <div class="card">
