--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
     <link rel="stylesheet" href="./css/subtitulo-blanco.css">
     <link rel="stylesheet" href="./css/background-lila.css">
     <link rel="stylesheet" href="./css/background-blanco.css">
+    <link rel="stylesheet" href="css/formacion/formacion.css">
+    <link rel="stylesheet" href="./css/formacion/formacion.css">
+    <link rel="stylesheet" href="./css/formacion/flip-card-back.css">
+    <link rel="stylesheet" href="./css/formacion/flip-card-front.css">
+    <link rel="stylesheet" href="./css/formacion/flip-card-inner.css">
+    <link rel="stylesheet" href="./css/formacion/flip-card.css">
+    <link rel="stylesheet" href="./css/formacion/img-formacion.css">
+    <link rel="stylesheet" href="./css/formacion/titulo-flip-card.css">
+
 </head>
 
 <body>
@@ -140,41 +149,41 @@
             </div>
         </section>
         <!--Formación académica-->
-        <section class="container background__lila" id="formacion">
-            <h2 class="subtitulo__blanco titulo__formacion">Formación Académica</h2>
+        <section class="container background__lila formacion" id="formacion">
+            <h2 class="subtitulo__blanco">Formación Académica</h2>
 
             <div class="cards__tecno">
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="img/utic.png" alt="Utic" class="img_formacion">
+                <div class="flip__card">
+                    <div class="flip__card__inner ">
+                        <div class="flip__card__front">
+                            <img src="img/utic.png" alt="Utic" class="img__formacion">
                         </div>
-                        <div class="flip-card-back">
-                            <p class="title">Ing. Comercial</p>
+                        <div class="flip__card__back">
+                            <p class="titulo__flip__card">Ing. Comercial</p>
                             <p>2012-2016</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="img/Bootcamp-institute.png" alt="Bootcamp Institute" class="img_formacion">
+                <div class="flip__card">
+                    <div class="flip__card__inner ">
+                        <div class="flip__card__front">
+                            <img src="img/Bootcamp-institute.png" alt="Bootcamp Institute" class="img__formacion">
                         </div>
-                        <div class="flip-card-back">
-                            <p class="title">Aws Re/start</p>
+                        <div class="flip__card__back">
+                            <p class="titulo__flip__card ">Aws Re/start</p>
                             <p>2022</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="img/Alura.png" alt="Alura" class="img_formacion">
+                <div class="flip__card">
+                    <div class="flip__card__inner ">
+                        <div class="flip__card__front">
+                            <img src="img/Alura.png" alt="Alura" class="img__formacion">
                         </div>
-                        <div class="flip-card-back">
-                            <p class="title">Front end Developer</p>
+                        <div class="flip__card__back">
+                            <p class="titulo__flip__card ">Front end Developer</p>
                             <p>2022-2023</p>
                         </div>
                     </div>
@@ -183,7 +192,7 @@
         </section>
 
         <!--Proyectos-->
-        <section class="container skills" id="proyectos">
+        <section class="container background__blanco" id="proyectos">
             <h2 class="subtitulo__blanco">Proyectos</h2>
             <div class="container__projects">
 
