proyectos flex wrap

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <link rel="stylesheet" href="./css/formacion/img-formacion.css">
     <link rel="stylesheet" href="./css/formacion/titulo-flip-card.css">
 
+    <link rel="stylesheet" href="./css/footer/footer.css">
+    <link rel="stylesheet" href="./css/footer/contenido-footer.css">
 </head>
 
 <body>
@@ -192,8 +194,8 @@
         </section>
 
         <!--Proyectos-->
-        <section class="container background__blanco" id="proyectos">
-            <h2 class="subtitulo__blanco">Proyectos</h2>
+        <section class="container background__blanco projects" id="proyectos">
+            <h2 class="subtitulo__negro">Proyectos</h2>
             <div class="container__projects">
 
                 <article class="cards_projects">
