Mensaje de agradecimiento

--- a/index.html
+++ b/index.html
@@ -206,15 +206,15 @@
                                 y Morty.</p>
                             <hr>
                         </div>
-                        <div class="items price">
+                        <div class="items button__tecnoGroup">
                             <button class="button__tecno ">HTML</button>
                             <button class="button__tecno ">CSS</button>
                             <button class="button__tecno">JavaScript</button>
 
                         </div>
                         <div class="items enlace">
-                            <button class="button_enlace"><a href="Figma">Figma</a></button>
-                            <button class="button_enlace"><a href="Demo">Demo</a></button>
+                            <button class="button_enlace"><a href="Figma"target="_blank">Figma</a></button>
+                            <button class="button_enlace"><a href="Demo" target="_blank">Demo</a></button>
                         </div>
                     </div>
                 </article>
@@ -227,15 +227,15 @@
                                 y Morty.</p>
                             <hr>
                         </div>
-                        <div class="items price">
+                        <div class="items  button__tecnoGroup">
                             <button class="button__tecno ">HTML</button>
                             <button class="button__tecno ">CSS</button>
                             <button class="button__tecno">JavaScript</button>
 
                         </div>
                         <div class="items enlace">
-                            <button class="button_enlace"><a href="Figma">Figma</a></button>
-                            <button class="button_enlace"><a href="Demo">Demo</a></button>
+                            <button class="button_enlace"><a href="https://www.figma.com/file/NH5tK2l5fhkzY3qQw2gxIC/Alura-Challenge---Desaf%C3%ADo-1---Encriptador?type=design&node-id=0-1&t=oQQ4Dpv6mzsMIGCS-0" target="_blank">Figma</a></button>
+                            <button class="button_enlace"><a href="https://cynthmartz.github.io/encriptador/" target="_blank">Demo</a></button>
                         </div>
                     </div>
                 </article>
@@ -247,15 +247,15 @@
                                 y Morty.</p>
                             <hr>
                         </div>
-                        <div class="items price">
+                        <div class="items  button__tecnoGroup">
                             <button class="button__tecno ">HTML</button>
                             <button class="button__tecno ">CSS</button>
                             <button class="button__tecno">JavaScript</button>
 
                         </div>
                         <div class="items enlace">
-                            <button class="button_enlace"><a href="Figma">Figma</a></button>
-                            <button class="button_enlace"><a href="Demo">Demo</a></button>
+                            <button class="button_enlace"><a href="Figma" target="_blank">Figma</a></button>
+                            <button class="button_enlace"><a href="Demo" target="_blank">Demo</a></button>
                         </div>
                     </div>
                 </article>
@@ -267,15 +267,15 @@
                                 y Morty.</p>
                             <hr>
                         </div>
-                        <div class="items price">
+                        <div class="items  button__tecnoGroup">
                             <button class="button__tecno ">HTML</button>
                             <button class="button__tecno ">CSS</button>
                             <button class="button__tecno">JavaScript</button>
 
                         </div>
                         <div class="items enlace">
-                            <button class="button_enlace"><a href="Figma">Figma</a></button>
-                            <button class="button_enlace"><a href="Demo">Demo</a></button>
+                            <button class="button_enlace"><a href="Figma" target="_blank">Figma</a></button>
+                            <button class="button_enlace"><a href="Demo" target="_blank">Demo</a></button>
                         </div>
                     </div>
                 </article>
@@ -283,47 +283,47 @@
         </section>
 
         <!--Contacto-->
-        <section class="container background__lila formulario__contacto" id="contacto">
-            <h2 class="subtitulo__negro titulo__formacion">Contacto</h2>
+        <section class="container background__blanco" id="contacto">
+            <h2 class="subtitulo__negro">Contacto</h2>
             <div class="contacto__container">
-                <img src="/img/Notebook-contacto.png" alt="">
+                <img src="/img/Notebook-contacto.png" alt="computador">
                 <div>
-                    <div>
+                    <div class="contenido__formulario">
                         <p class="contacto__titulo">¿Quieres contactarme?</p>
                         <p class="contacto__descripcion">Complete el siguiente formulario y me pondré en contacto con
                             usted lo antes posible.</p>
                     </div>
 
-                    <form action="https://formsubmit.co/75dfb2d9fd093b82f85cb0cdede6fc29" method="POST"
+                    <form action="https://formsubmit.co/2016f958202ef4b536ee7b614a1927b4" method="POST"
                         class="formulario" id="formulario">
                         <fieldset class="fieldset">
                             <div class="formulario__grupo" id="grupo__usuario">
                                 <div class="formulario__grupo-input">
                                     <input type="text" id="nombre" name="nombre" class="formulario__input"
-                                        placeholder="Nombre Completo:" required data-tipo="nombreCompleto">
+                                        placeholder="Nombre" required data-tipo="nombreCompleto">
                                     <label class="formulario__label" for="nombre">Nombre </label>
                                     <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
-                                    <span class="formulario__input-error">El campo no puede estar vacío</span>
+                                    <span class="formulario__input-error">El campo no puede estar vacío.</span>
                                 </div>
                             </div>
 
                             <div class="formulario__grupo" id="grupo__email">
                                 <div class="formulario__grupo-input">
                                     <input type="email" id="email" name="email" class="formulario__input" required
-                                        placeholder="Correo Electrónico:" data-tipo="email">
+                                        placeholder="Email" data-tipo="email">
                                     <label class="formulario__label" for="email">Email</label>
                                     <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
-                                    <span class="formulario__input-error">Ingrese algun correo</span>
+                                    <span class="formulario__input-error">Ingrese algun correo.</span>
                                 </div>
                             </div>
 
                             <div class="formulario__grupo" id="grupo__asunto">
                                 <div class="formulario__grupo-input">
                                     <input type="text" id="asunto" name="asunto" class="formulario__input"
-                                        placeholder="Asunto:" required data-tipo="asunto">
+                                        placeholder="Asunto" required data-tipo="asunto">
                                     <label class="formulario__label" for="asunto">Asunto</label>
                                     <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
-                                    <span class="formulario__input-error">El campo no puede estar vacío</span>
+                                    <span class="formulario__input-error">El campo no puede estar vacío.</span>
                                 </div>
                             </div>
 
@@ -334,7 +334,7 @@
                                         data-tipo="mensaje"></textarea>
                                     <label class="formulario__label" for="mensaje">Mensaje</label>
                                     <i class="formulario__validacion-estado fa-solid fa-circle-xmark"></i>
-                                    <span class="formulario__input-error">El campo no puede estar vacío</span>
+                                    <span class="formulario__input-error">El campo no puede estar vacío.</span>
                                 </div>
 
                             </div>
@@ -343,7 +343,7 @@
                             <i class="fa-solid fa-paper-plane"></i>
                         </button>
                         <input type="hidden" name="_next"
-                            value="https://garciarojasp.github.io/portafolio_patricia/thanks.html">
+                            value="https://cynthmartz.github.io/Portfolio/thanks.html">
                         <input type="hidden" name="_template" value="table">
                     </form>
                 </div>
@@ -358,7 +358,7 @@
     <footer class="container footer">
         <h6 class="contenido__footer">Desarrollado por Cynthia -2023</h6>
     </footer>
-    <script src="./js/Menu.js"></script>
+    <script src="./js/app.js" type="module" ></script>
 </body>
 
 
